[package]
name = "bastion-try-recv"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = { git = "https://github.com/bastion-rs/bastion.git", branch = "igni/affine_steal_sort" }
futures = "0.3"
